--- a/jinRiCompany/Classes/S3SijiYangSheng.plist
+++ b/jinRiCompany/Classes/S3SijiYangSheng.plist
@@ -7,14 +7,14 @@
 		<key>firstTitle</key>
 		<dict>
 			<key>x</key>
-			<string>110</string>
+			<string>140</string>
 			<key>y</key>
 			<string>620</string>
 		</dict>
 		<key>naviTitle</key>
 		<dict>
 			<key>x</key>
-			<string>280</string>
+			<string>310</string>
 			<key>y</key>
 			<string>620</string>
 		</dict>
@@ -24,6 +24,13 @@
 			<string>120</string>
 			<key>y</key>
 			<string>140</string>
+		</dict>
+		<key>back</key>
+		<dict>
+			<key>x</key>
+			<string>970</string>
+			<key>y</key>
+			<string>540</string>
 		</dict>
 	</dict>
 	<key>fontSize</key>
